# temlet

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  CRAWLERS_README.md  DATABASE_SETUP.md  DESKTOP.md  DESKTOP_ROADMAP.md  Dockerfile  Dockerfile.dev  LICENSE  README-DOCKER.md  README.md  TIKTOK_SETUP.md  WORKING_DIRECTORY_SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  env.example  eslint.config.mjs  get_youtube_token.js  instrumentation.ts  next.config.ts  nginx.conf  package-lock.json  package.json  prisma.config.ts  start-nextjs.js  temlet.env.example  test-crawler.js  test-db-connection.js  test-prisma-models.js  test-simple.js  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/ae_render_jobs/: page.tsx
app/assets/: assetAiHandlers.ts  assetMediaHandlers.ts  page.tsx  types.ts  useAssetActions.deps.ts  useAssetActions.ts  useAssetData.deps.ts  useAssetData.ts  useAssetDerivations.deps.ts  useAssetDerivations.ts  utils.ts
app/callback/: page.tsx
app/components/: CreateCrawlerDialog.tsx  CreateRenderDialog.tsx  ErrorDialog.tsx  (+15 more)
lib/: config.ts  prisma.ts
loading/: index.html
postman/: RumitX Studio.postman_collection.json  Temlet.postman_collection.json  nexrender-manager.postman_collection.json
prisma/: schema.prisma
scripts/: fetch-chromium.mjs  fetch-node-runtime.mjs  monitor.js  prepare-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  secrets.rs
(+118 files in other folders)
