[package]
name = "temlet"
version = "0.3.0"
description = "Temlet desktop — video rendering and upload management"
authors = ["rumitx"]
license = "MIT"
repository = "https://github.com/rumitvn/temlet"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2.3.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
uuid = { version = "1.20.0", features = ["v4"] }
